--- a/server/package.json
+++ b/server/package.json
@@ -21,12 +21,16 @@
   },
   "homepage": "https://github.com/MaxAFath/norms-r#readme",
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "apollo-server": "^3.10.0",
     "apollo-server-express": "^3.10.0",
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.0",
-    "nodemon": "^2.0.19"
+    "jwt-decode": "^3.1.2",
+    "mongoose": "^6.5.1",
+    "nodemon": "^2.0.19",
+    "react-router-dom": "^6.3.0"
   }
 }
